Added the rest of the code

--- a/index.html
+++ b/index.html
@@ -1,4 +1,21 @@
+ <!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Title of the document</title>
+</head>
+
+<body>
+
+
 Index page.
 
 
 <a href="/asd.html"> link </a>
+
+
+</body>
+
+</html> 
+
+
