Inserted some divs

--- a/index.html
+++ b/index.html
@@ -7,14 +7,18 @@
 
 <body>
 
-
+<div>
 <span>Index page.</span>
 
+</div>
+
+
+<br>
 <br>
 
-
+<div>
 <a href="/asd.html"> link </a>
-
+</div>
 
 </body>
 
